--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class="page-name">
+    <h1>GAME LIST</h1>
+</div><br><br>
+
 <div class="styled-dropdown-container">
     <select id="genreDropdown" class="styled-dropdown">
         <option value="all">All genres</option>
