--- a/app/templates/founder_list.html
+++ b/app/templates/founder_list.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class="page-name">
+    <h1>FOUNDER LIST</h1>
+</div><br><br>
+
 <div class="styled-dropdown-container">
     <select id="companyDropdown" class="styled-dropdown">
         <option value="all">All companies</option>
