--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -91,7 +91,7 @@
 </div>
 
 <div id="directors" class="section" style="display:none;">
-    <h3>Added directors:</h3>
+    <h3>Directors added:</h3>
     <ul>
         {% if user_directors %}
             {% for director in user_directors %}
