hard coded id for admin is changed into admin session

--- a/app/templates/company.html
+++ b/app/templates/company.html
@@ -70,7 +70,7 @@
                     {% endfor %}
                 </p>
                 <p>Founded in: {{company.time_founded}}</p>
-                <p>Founded in: {{company.headquarters}}</p>
+                <p>Headquarters: {{company.headquarters}}</p>
             </div>
         </div>
         <hr class="red-h-line">
