--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -21,7 +21,7 @@
             <label for="message">Message:</label>
             <br><br>
                 <!-- Textarea allowing multi-line input -->
-            <textarea id="message" name="message" class="add_stuff_bar" rows="6" required maxlength="400" placeholder="maxlength=400" required pattern="\S.+" title="Has to be more than one letter/cannot leave empty space."></textarea>   
+            <textarea id="message" name="message" class="add_stuff_bar" rows="6" required maxlength="400" placeholder="maxlength=400"></textarea>   
             <button type="submit" id="submitButton">Send Message</button>
         </form>
     </div>
