--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -37,7 +37,7 @@
         </div>
         {% endfor %}
     {% else %}
-        <p>You added no games <a href="/add_game">Add game?</a></p>
+        <p>No games added yet, <a href="/add_game">Add game?</a></p>
     {% endif %}
     </ul> 
 </div>
