Fixed the jpg only error for images in the add stuff form
During testing i found out that the errors for pictures in the add stuff form does not show up. Fixed it

--- a/app/templates/add_founder.html
+++ b/app/templates/add_founder.html
@@ -47,12 +47,18 @@
             {% endif %}
             <br><br>
 
-    Add pictures:
+    Add pictures(JPG ONLY!):
             <br><br>
             <div class="add-stuff-images">
               Picture 1: <input type="file" id="founder_picture_size_limit_1" class="add_stuff_bar" name="founder_picture_1">
+              {% if founder_form.founder_picture_1.errors %}
+              <span class="error-message">{{ founder_form.founder_picture_1.errors[0] }}</span>
+              {% endif %}
               <br><br>
               Picture 2: <input type="file" id="founder_picture_size_limit_2" class="add_stuff_bar" name="founder_picture_2">
+              {% if founder_form.founder_picture_2.errors %}
+              <span class="error-message">{{ founder_form.founder_picture_2.errors[0] }}</span>
+              {% endif %}
             </div>
             <br><br>
 
