--- a/app/templates/add_company.html
+++ b/app/templates/add_company.html
@@ -118,12 +118,18 @@
             {% endif %}
             <br><br>
 
-            Add pictures:
+            Add pictures(JPG ONLY!):
             <br><br>
             <div class="add-stuff-images">
               Picture 1: <input type="file" id="company_picture_size_limit_1" class="add_stuff_bar" name="company_picture_1">
+              {% if company_form.company_picture_1.errors %}
+              <span class="error-message">{{ company_form.company_picture_1.errors[0] }}</span>
+              {% endif %}
               <br><br>
               Picture 2: <input type="file" id="company_picture_size_limit_2" class="add_stuff_bar" name="company_picture_2">
+              {% if company_form.company_picture_2.errors %}
+              <span class="error-message">{{ company_form.company_picture_2.errors[0] }}</span>
+              {% endif %}
             </div>
             <br><br>
             
