--- a/app/templates/add_directors.html
+++ b/app/templates/add_directors.html
@@ -63,12 +63,18 @@
             {% endif %}
             <br><br>
 
-    Add pictures:
+    Add pictures(JPG ONLY!):
             <br><br>
             <div class="add-stuff-images">
               Picture 1: <input type="file" id="director_picture_size_limit_1" class="add_stuff_bar" name="director_picture_1">
+              {% if director_form.director_picture_1.errors %}
+              <span class="error-message">{{ director_form.director_picture_1.errors[0] }}</span>
+              {% endif %}
               <br><br>
               Picture 2: <input type="file" id="director_picture_size_limit_2" class="add_stuff_bar" name="director_picture_2">
+              {% if director_form.director_picture_2.errors %}
+              <span class="error-message">{{ director_form.director_picture_2.errors[0] }}</span>
+              {% endif %}
             </div>
             <br><br>
 
