--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class="page-name">
+    <h1>Dashboard</h1>
+</div>
 
 <div>
     <div class="profile-box">
