--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -7,7 +7,7 @@
     </div>
     <form method="POST" id="submit_register_form" enctype="multipart/form-data" action="{{ url_for('register') }}">
         {{ username_form.hidden_tag() }}
-        <div><p>Picture(JPG ONLY!)</p><br>
+        <div><p>Profile Picture(JPG ONLY!)</p><br>
             <input type="file" id="register_picture_size_limit" class="add_stuff_bar" name="user_picture">
             {% if username_form.user_picture.errors %}
             <span class="error-message">{{ username_form.user_picture.errors[0] }}</span>
