--- a/app/templates/add_company.html
+++ b/app/templates/add_company.html
@@ -28,7 +28,7 @@
               <br><br>
     
               <p>
-                <p class="note">*If game is not in the list submit this company and then go to add game page to add the considered game*</p>
+                <p class="note">&#10024If game is not in the list, submit this company and then go to add game page to add the corresponding game&#10024</p>
                 <br>
                 <button type="button" id="toggleCompanyGames" class="toggle-button">
                   Select Games <span class="arrow-down" id="arrowCompanyGames">&#9662;</span>
@@ -45,7 +45,7 @@
               <br><br>
               
               <p>
-                <p class="note">*If director is not in the list submit this company and then go to add director page to add the considered director*</p>
+                <p class="note">&#10024If director is not in the list, submit this company and then go to add director page to add the corresponding director&#10024</p>
                 <br>
                 <button type="button" id="toggleCompanyDirectors" class="toggle-button">
                   Select directors <span class="arrow-down" id="arrowCompanyDirectors">&#9662;</span>
@@ -62,7 +62,7 @@
               <br><br>
               
               <p>
-                <p class="note">*If founder is not in the list submit this company and then go to add founder page to add the considered founder*</p>
+                <p class="note">&#10024If founder is not in the list, submit this company and then go to add founder page to add the corresponding founder&#10024</p>
                 <br>
                 <button type="button" id="toggleCompanyFounders" class="toggle-button">
                   Select founders <span class="arrow-down" id="arrowCompanyFounders">&#9662;</span>
