--- a/app/templates/add_founder.html
+++ b/app/templates/add_founder.html
@@ -16,7 +16,7 @@
               <br><br>
 
     <p>
-      <p class="note">*If company is not in the list submit this founder and then go to add company page to add the considered company*</p>
+      <p>&#10024If company is not in the list, submit this founder and then go to add company page to add the corresponding company&#10024</p>
       <br>
       <button type="button" id="toggleFounderCompanies" class="toggle-button">
         Select Companies <span class="arrow-down" id="arrowFounderCompanies">&#9662;</span>
