--- a/app/templates/add_directors.html
+++ b/app/templates/add_directors.html
@@ -16,7 +16,7 @@
               <br><br>
 
               <p>
-                <p class="note">*If game is not in the list submit this director and then go to add game page to add the considered game*</p>
+                <p class="note">&#10024If game is not in the list, submit this director and then go to add game page to add the corresponding game&#10024</p>
                 <br>
                 <button type="button" id="toggleDirectorGames" class="toggle-button">
                   Select Games <span class="arrow-down" id="arrowDirectorGames">&#9662;</span>
@@ -33,7 +33,7 @@
               <br><br>
 
           <p>
-            <p class="note">*If company is not in the list submit this director and then go to add company page to add the considered company*</p>
+            <p class="note">&#10024If company is not in the list, submit this director and then go to add company page to add the corresponding company&#10024</p>
             <br>
             <button type="button" id="toggleDirectorCompanies" class="toggle-button">
               Select Companies <span class="arrow-down" id="arrowDirectorCompanies">&#9662;</span>
